# ai-video-driver

./: .gitignore  CLAUDE.md  README.md  gradio_demo.py  main.py  pyproject.toml  requirements.txt
ai_video_driver/: README.md  __init__.py  config.py  content_fetcher.py  file_utils.py  logger.py  podcast_converter.py  video_generator.py
fireredtts2/: fireredtts2.py
fireredtts2/utils/: spliter.py
pretrained_models/: README.md
tests/: test_github_content_fetcher.py  test_podcast_converter.py
