[project]
name = "ai-video-driver"
version = "0.1.0"
description = "AI-powered automatic video generation tool that transforms text into engaging videos with synchronized speech and animation using FireRedTTS-2 and Manim"
readme = "README.md"
requires-python = ">=3.9, <3.13"
dependencies = [
    "torch==2.7.1",
    "torchvision==0.22.1",
    "torchaudio==2.7.1",
    "torchtune>=0.6.1",
    "torchao>=0.13.0",
    "transformers>=4.56.1",
    "einops>=0.8.1",
    "gradio>=4.44.1",
    "soundfile>=0.13.1",
    "librosa>=0.11.0",
    "manim>=0.18.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pytest>=7.0.0",
    "openai>=1.108.0",
]
